Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignNumberTextObjWrapped.quorum
class main
    action Main
        Text t
        t:setValue()
        number n = t
    end
end